WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33212
Small fixes/improvements to WebKitAPITest
https://bugs.webkit.org/show_bug.cgi?id=33212
Summary
Small fixes/improvements to WebKitAPITest
Adam Roben (:aroben)
Reported
2010-01-05 09:24:04 PST
I have a few small improvements/fixes to WebKitAPITest I'd like to land.
Attachments
Fix WebKitCreateInstance helper
(1.25 KB, patch)
2010-01-05 09:31 PST
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
Don't hang in WebKitAPITest if no messages have been posted
(1.48 KB, patch)
2010-01-05 09:31 PST
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
Don't show HostWindows by default
(1.53 KB, patch)
2010-01-05 09:31 PST
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
Share more code in the WebViewDestruction tests
(5.91 KB, patch)
2010-01-05 09:39 PST
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-01-05 09:31:14 PST
Created
attachment 45897
[details]
Fix WebKitCreateInstance helper
Adam Roben (:aroben)
Comment 2
2010-01-05 09:31:21 PST
Created
attachment 45898
[details]
Don't hang in WebKitAPITest if no messages have been posted
Adam Roben (:aroben)
Comment 3
2010-01-05 09:31:26 PST
Created
attachment 45899
[details]
Don't show HostWindows by default
WebKit Review Bot
Comment 4
2010-01-05 09:35:03 PST
style-queue ran check-webkit-style on
attachment 45897
[details]
without any errors.
WebKit Review Bot
Comment 5
2010-01-05 09:35:33 PST
style-queue ran check-webkit-style on
attachment 45898
[details]
without any errors.
WebKit Review Bot
Comment 6
2010-01-05 09:36:05 PST
style-queue ran check-webkit-style on
attachment 45899
[details]
without any errors.
Adam Roben (:aroben)
Comment 7
2010-01-05 09:39:52 PST
Created
attachment 45901
[details]
Share more code in the WebViewDestruction tests
WebKit Review Bot
Comment 8
2010-01-05 09:41:37 PST
style-queue ran check-webkit-style on
attachment 45901
[details]
without any errors.
Adam Roben (:aroben)
Comment 9
2010-01-05 10:16:08 PST
Committed
r52802
: <
http://trac.webkit.org/changeset/52802
>
Adam Roben (:aroben)
Comment 10
2010-01-05 10:16:32 PST
Committed
r52803
: <
http://trac.webkit.org/changeset/52803
>
Adam Roben (:aroben)
Comment 11
2010-01-05 10:16:59 PST
Committed
r52804
: <
http://trac.webkit.org/changeset/52804
>
Adam Roben (:aroben)
Comment 12
2010-01-05 10:17:23 PST
Committed
r52805
: <
http://trac.webkit.org/changeset/52805
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug