Don't show HostWindows by default

This was making WebKitAPITest very flashy as windows appeared and
disappeared.

Part of <http://webkit.org/b/33212> Small fixes/improvements to
WebKitAPITest

Reviewed by Sam Weinig.

* WebKitAPITest/HostWindow.cpp:
(WebKitAPITest::HostWindow::initialize): Removed the WS_VISIBLE style
from the window.

Canonical link: https://commits.webkit.org/44217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52804 268f45cc-cd09-0410-ab3c-d52691b4dbfc